# JS-CMP

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Add_8cpp.html  Add_8cpp.js  Add_8cpp__incl.dot  Arguments_8hpp.html  Arguments_8hpp.js  Arguments_8hpp__dep__incl.dot  Arguments_8hpp__incl.dot  Arguments_8hpp_source.html  Array_2methods_8cpp.html  Array_2methods_8cpp__incl.dot  Array_2prototypeProperties_8cpp.html  Array_2prototypeProperties_8cpp__incl.dot  Array_2prototype_8cpp.html  Array_2prototype_8cpp__incl.dot  Assert_8cpp.html  Assert_8cpp__incl.dot  Assert_8hpp.html  Assert_8hpp.js  Assert_8hpp__dep__incl.dot  Assert_8hpp__incl.dot  Assert_8hpp_source.html  AssertionError_8hpp.html  AssertionError_8hpp.js  AssertionError_8hpp__dep__incl.dot  AssertionError_8hpp__incl.dot  AssertionError_8hpp_source.html  Attribute_8hpp.html  Attribute_8hpp.js  Attribute_8hpp__dep__incl.dot  Attribute_8hpp__incl.dot  Attribute_8hpp_source.html  BTP.md  Bool_8cpp.html  Bool_8cpp__incl.dot  Boolean_2prototypeProperties_8cpp.html  Boolean_2prototypeProperties_8cpp__incl.dot  (+1307 more)
.github/workflows/: compile.yml  doxygen-checker.yml  doxygen-publish.yml  linter.yml  mirror.yml  release.yml
cmake/: js_cmpConfig.cmake.in  presets.cmake
configs/: uncrustify.cfg
docs/custom/: header.html
gonogo-review/: BTP.md  KPI Eip.md
includes/: globals.hpp
includes/class/: Console.hpp
includes/class/Assert/: Assert.hpp  assert.hpp
includes/class/Console/: Console.hpp
includes/class/Rope/: Nodes.hpp  Rope.hpp  RopeConcat.hpp  RopeIterator.hpp  RopeLeaf.hpp  RopeNode.hpp
includes/class/URI/: URI.hpp  URIExeption.hpp
includes/controlFlow/: Switch.hpp  TCF.hpp
includes/customOperators/: CustomOperators.hpp  Debugger.hpp  Delete.hpp  Equality.hpp  In.hpp  InstanceOf.hpp  New.hpp  Typeof.hpp  URightShift.hpp  Void.hpp
includes/exceptions/: AssertionError.hpp  IAssertion.hpp  TempTypeError.hpp  TypeError.hpp
includes/global/: Console.hpp  console.hpp  global.hpp  globalFunctions.hpp  global_isFinite.hpp  global_isNaN.hpp  global_parseFloat.hpp  global_parseInt.hpp  global_typeof.hpp  global_void.hpp
includes/internals/: Arguments.hpp  Attribute.hpp  IObject.hpp  Object.hpp  Operator.hpp  PropertyProxy.hpp
includes/math/: math.hpp
includes/types/: Attribute.hpp  JsAny.hpp  JsArray.hpp  JsObject.hpp  Types.hpp
includes/types/Objects/: JsArray.hpp  JsFunction.hpp  JsObject.hpp
includes/types/objects/: JsArray.hpp  JsBoolean.hpp  JsDate.hpp  JsFunction.hpp  JsJSON.hpp  JsMath.hpp  JsNumber.hpp  JsObject.hpp  JsRegExp.hpp  JsRegex.hpp  JsString.hpp  Proto.hpp  Types.hpp
includes/types/objects/Boolean/: JsBoolean.hpp  PrototypeMethods.hpp  PrototypeProperties.hpp
includes/types/objects/Error/: JsError.hpp  JsNativeError.hpp  JsRangeError.hpp  JsReferenceError.hpp  JsSyntaxError.hpp  JsTypeError.hpp  JsURIError.hpp
includes/types/objects/Function/: JsFunction.hpp  JsFunctionBinded.hpp
includes/types/objects/Number/: JsNumber.hpp  PrototypeMethods.hpp  PrototypeProperties.hpp  StatitcMethods.hpp
includes/types/objects/Object/: JsObject.hpp  PrototypeMethods.hpp  PrototypeProperties.hpp  StaticMethods.hpp
includes/types/objects/String/: JsString.hpp  PrototypeMethods.hpp  PrototypeProperties.hpp  StaticMethods.hpp
includes/types/reference/: Reference.hpp
includes/utils/: Compare.hpp  Convert.hpp  Declaration.hpp  Is.hpp
lib/class/: Console.cpp  Helper.hpp
lib/class/Assert/: Assert.cpp  assert.cpp
lib/class/Console/: Console.cpp
lib/class/Rope/: Rope.cpp  RopeConcat.cpp  RopeIterator.cpp  RopeLeaf.cpp
lib/class/URI/: URI.cpp
lib/controlFlow/: Switch.cpp
lib/global/: IsNaN.cpp  URI.cpp  console.cpp  global_IsNaN.cpp  global_isFinite.cpp  global_parseFloat.cpp  global_parseInt.cpp  global_typeof.cpp  global_void.cpp  isFinite.cpp  parseFloat.cpp  parseInt.cpp  typeof.cpp  void.cpp
lib/internals/: PropertyProxy.cpp
lib/internals/Arguments/: static.cpp
lib/internals/Object/: accessor.cpp  constructor.cpp  internalMethod.cpp  utils.cpp
lib/math/: math.cpp
lib/types/: JsAny.cpp  JsArray.cpp  JsObject.cpp  accessor.cpp  constructor.cpp
lib/types/Objects/: JsArray.cpp  JsFunction.cpp  JsObject.cpp
lib/types/objects/: JsArray.cpp  JsFunction.cpp  JsObject.cpp
lib/types/objects/Array/: accessor.cpp  constructor.cpp  internalMethod.cpp  methods.cpp  prototype.cpp  prototypeProperties.cpp
lib/types/objects/Boolean/: accessor.cpp  constructor.cpp  internalMethod.cpp  methods.cpp  prototype.cpp  prototypeProperties.cpp
lib/types/objects/Date/: constructor.cpp  internalMethod.cpp  methods.cpp  operators.cpp  prototype.cpp  prototypeProperties.cpp
lib/types/objects/Error/: accessor.cpp  constructor.cpp  internalMethods.cpp  prototype.cpp  prototypeProperties.cpp
lib/types/objects/Function/: JsFunction.cpp
lib/types/objects/JSON/: static.cpp
lib/types/operators/: Add.cpp  BinaryLogical.cpp  Decr.cpp  Div.cpp  Incr.cpp  Left_Chevron.cpp  Modulo.cpp  Mult.cpp  Right_Chevron.cpp  Sub.cpp  accessor.cpp
lib/types/reference/: Reference.cpp
lib/types/utils/: Compare.cpp  Convert.cpp
lib/utils/: Compare.cpp  Convert.cpp  Is.cpp
lib/utils/Convert/: FromPropertyDescriptor.cpp  ObjectsToString.cpp  Stringify.cpp  ToBoolean.cpp  ToInt16.cpp  ToInt32.cpp  ToInteger.cpp  ToNumber.cpp  ToObject.cpp  ToPrimitive.cpp  ToPropertyDescriptor.cpp  ToRope.cpp  ToString.cpp  ToUint16.cpp  ToUint32.cpp  ToUtf16.cpp  ToUtf8.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1e.js  all_1f.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+109 more)
src/: Body.cpp  Builder.cpp  Builder.hpp  Function.cpp  Include.cpp  Lexer.cpp  Options.cpp  Options.hpp  Program.cpp  Token.cpp
uncrustify_config/: uncrustify.cfg
(+99 files in other folders)
